# poe-price-checker

./: .bandit  .coverage  .coveragerc  .flake8  .gitattributes  .gitignore  .output.txt  .pre-commit-config.yaml  CARGO_API_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  CODE_OF_CONDUCT.md  CODE_SCANNING_REPORT.md  CONTINUATION.md  CONTRIBUTING.md  Context.md  DOCUMENTATION_CLEANUP_COMPLETE.md  FINAL_TEST_SUMMARY.md  LICENSE  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.2.md  SECURITY.md  STASH_SCANNER_CHECKLIST.md  SUGGESTED_TESTS.md  TESTING.md  TESTING_STATUS.md  TESTING_SUMMARY.md  TEST_FIXES_SUMMARY.md  build.py  check.sh  code_scanning_alerts.txt  codecov.yml  coverage.xml  debug_clipboard.py  demo_meta_integration.py  demo_rare_filtering.py  fix_claude_config.ps1  (+18 more)
.claude/: TASKS.md  settings.local.json
.claude/commands/: add-feature.md  audit-full.md  check-pr.md  coverage-gaps.md  debug-qt.md  lint-fix.md  review-accessibility.md  review-architecture.md  review-docs.md  review-performance.md  review-poe-expert.md  review-poe-journeyman.md  review-security.md  review-tests.md  security-scan.md  test-module.md  update-meta-builds.md  update-poe-knowledge.md
.claude/personas/: README.md  accessibility-champion.md  poe-glossary.md  (+7 more)
.continue/: .continueignore  README.md  config.json  config.py.json
.github/: dependabot.yml
api/: __init__.py  dependencies.py  main.py  models.py
core/: affix_tier_calculator.py  ai_improvement_advisor.py  ai_prompt_builder.py  ai_upgrade_advisor.py  app_context.py  bis_calculator.py  build_archetype.py  build_comparison.py  build_matcher.py  build_priorities.py  build_stat_calculator.py  build_summarizer.py  client_txt_monitor.py  clipboard_monitor.py  config.py  constants.py  crafting_potential.py  database.py  derived_sources.py  dps_impact_calculator.py  game_data.py  game_version.py  guide_gear_extractor.py  history.py  interfaces.py  item_parser.py  league_economy_history.py  logging_setup.py  loot_session.py  meta_analyzer.py  mod_tier_detector.py  passive_tree_data.py  pob_integration.py  pob_local_scanner.py  poe2_data.py  poe_oauth.py  price_arbitration.py  price_context.py  price_estimation.py  price_integrator.py  (+23 more)
data/: archetype_weights.json  build_archetypes.json  cluster_jewel_notables.json  unique_item_data.json  valuable_affixes.json  valuable_bases.json
data_sources/: affix_data_provider.py  base_api.py  build_scrapers.py  cargo_api_client.py  mod_data_loader.py  mod_database.py  poe_ninja_client.py  poe_stash_api.py  repoe_client.py
docs/: APP_UPDATE_SUMMARY.md  CI_DEPLOYMENT_FIX.md  CODE_REVIEW_2025-11-29.md  Context.md  DOCS_MANIFEST.md  INDEX.md  NEXT_SESSION_PLAN.md  PERFORMANCE_IMPROVEMENTS.md  PLUGIN_SPEC.md  POEWATCH_API_REFERENCE.md  POEWATCH_INTEGRATION_SUMMARY.md  POE_API_REFERENCE.md  PYCHARM_SETUP.md  RARE_ITEM_VALUATION.md  REORGANIZATION_LOG.md  ROADMAP.md  SESSION_SUMMARY.md  code_review.md  roadmap.md  roadmap_pob_integration.md  roadmap_rare_item_training.md
gui/: main_window.py  pob_character_window.py  rare_evaluation_config_window.py  rare_evaluation_panel.py  recent_sales_window.py  sales_dashboard_window  sales_dashboard_window.py
gui_qt/: __init__.py  base.py  main_window.py  sample_items.py  shortcuts.py  styles.py
ml/: __init__.py
ops/: README.md  repo_overrides.md
scripts/: collect_economy_snapshot.py  explore_repoe.py  extract_banner_assets.py  fix_unused_imports.py  install-ml-feasibility-timer.sh  local_ci.py  ml-collector-status.sh  ml-collector-stop.sh  ml-collector.service  ml-feasibility-daily.py  setup-ml-collector.sh  start-ml-collector.sh  start_mcp_server.bat
tests/: conftest.py  conftest_utils.py  debug_clipboard.py  manual_mcp_test.py  test_affix_tier_calculator.py  test_app_context_league.py  test_bis_system.py  test_build_archetype.py  test_build_stat_calculator.py  test_clipboard_monitor.py  test_config.py  test_database.py  test_dps_impact_calculator.py  test_gui_copy_row.py  test_gui_details_and_status.py  test_gui_export_and_copy_all_tsv.py  test_infractem.py  test_item_comparison_dialog.py  test_item_parser.py  test_loadout_selector.py  test_mcp_manual.py  test_mcp_server.py  test_meta_analyzer.py  test_parser_diagnostics.py  test_performance_improvements.py  test_poe2_data.py  test_poe_ninja_client.py  test_poe_stash_api.py  test_poeninja_gems_and_divcards.py  test_poeninja_leagues.py  test_poewatch_api.py  test_price_integrator.py  test_price_service_multi_source.py  test_repoe_tier_provider.py  test_results_table.py  test_shortcuts.py  test_skill_analyzer.py  test_smart_trade_filters.py  test_stash_valuator.py  test_tree_comparison.py  (+2 more)
(+590 files in other folders)
